Fixed: Toggling episode monitored state won't shift UI over

--- a/src/UI/Series/series.less
+++ b/src/UI/Series/series.less
@@ -286,8 +286,10 @@
 
 .season-grid {
   .toggle-cell {
-    width      : 12px;
-    text-align : center;
+    width         : 28px;
+    text-align    : center;
+    padding-left  : 0px;
+    padding-right : 0px;
   }
 
   .toggle-cell {
